[project]
name = "zoom-rag-agent"
version = "0.1.0"
description = "A RAG agent used in Zoom"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cadwyn>=4.2.4",
    "fastapi>=0.115.0",
    "granian>=1.6.0",
    "llama-index>=0.11.13",
    "llama-index-core>=0.11.12",
    "llama-index-embeddings-jinaai>=0.3.1",
    "llama-index-llms-ollama>=0.3.3",
    "llama-index-vector-stores-qdrant>=0.3.0",
    "python-decouple>=3.8",
]

[tool.uv]
dev-dependencies = ["llama-index-utils-workflow>=0.2.1", "pytest>=8.3.3"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001", "D104"]

pydocstyle.convention = "google"
