[project]
name = "zoom-rag-agent"
version = "0.1.0"
description = "A RAG agent used in Zoom"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cadwyn>=4.2.4",
    "fastapi>=0.115.0",
    "granian>=1.6.0",
    "llama-index>=0.11.14",
    "llama-index-core>=0.11.14",
    "llama-index-embeddings-jinaai>=0.3.1",
    "llama-index-llms-ollama>=0.3.3",
    "llama-index-vector-stores-qdrant>=0.3.0",
    "pydantic-settings>=2.5.2",
]

[tool.uv]
dev-dependencies = [
    "dagger-io>=0.13.3",
    "llama-index-utils-workflow>=0.2.1",
    "pyre-check>=0.9.22",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001", "D104"]

pydocstyle.convention = "google"
