[project]
name = "zoom-rag-agent"
version = "0.1.0"
description = "A RAG agent used in Zoom"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.12" ]
dependencies = [
  "cadwyn>=4.4",
  "fastapi>=0.115",
  "granian>=1.6",
  "llama-index>=0.11.17",
  "llama-index-core>=0.11.17",
  "llama-index-llms-ollama>=0.3.4",
  "llama-index-vector-stores-qdrant>=0.3",
  "pydantic-settings>=2.5.2",
]

[tool.uv]
dev-dependencies = [
  "granian[reload]~=1.6.0",
  "llama-index-utils-workflow~=0.2.1",
]

pydocstyle.convention = "google"
